--- a/index.html
+++ b/index.html
@@ -75,8 +75,41 @@
 
         }
 
-        .footer {
+        footer {
+            background-color: rgba(30, 144, 255, 0.9);
+            color: white;
             text-align: center;
+            padding: 2em 0;
+            margin-top: 2em;
+            box-shadow: 0 -4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        footer h2 {
+            font-size: 36px;
+            margin: 5px;
+        }
+
+        footer .videos {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 1em;
+        }
+
+        footer iframe {
+            border: none;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
         }
     </style>
 </head>
