--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
             animation: fadeIn 2s ease-in-out;
         }
 
-
+        .inspiration h2 {
+            font-size: 44px;
+            margin: auto;
+            color: #1e90ff;
+        }
 
         img {
             display: block;
