--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
         <p>
             <br />
             This project was coded by
-            <a href="#" target="_blank">Iryna Skupinska</a> and is
-            <a href="#" target="_blank"> on GitHub</a> and
-            <a href="#" target="_blank">hosted on Netlify</a>
+            <a href="https://github.com/" target="_blank">Iryna Skupinska</a> and is
+            <a href="https://github.com/irycka/prj-inspiration" target="_blank"> on GitHub</a> and
+            <a href="https://inspiration-woman.netlify.app/" target="_blank">hosted on Netlify</a>
         </p>
     </footer>
 </body>
